# PixelHand

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  cli.py  directxtex_decoder.cp313-win_amd64.pyd  export_highres.py  fix.js  index.html  main.py  package-lock.json  package.json  ph.txt  phr.txt  pyproject.toml  run.bat  run_cpu.bat  run_cuda.bat  run_directml.bat  run_webgpu.bat  vite.config.js  zzzzzzz.txt
.cargo/: config.toml
app/: cache.py  data_models.py  diagnostics.py  image_io.py  image_utils.py  logging_config.py  utils.py  view_models.py
app/ai/: adapters.py  hashing.py  manager.py  optimizer.py  preprocessing.py  search_engine.py
app/core/: engines.py  hashing_worker.py  helpers.py  model_optimizer.py  pipeline.py  qc_rules.py  scan_stages.py  scanner.py  strategies.py  worker.py
app/domain/: config.py  data_models.py  view_models.py
app/gui/: delegates.py  dialogs.py  main_window.py  models.py  options_panel.py  results_panel.py  status_panel.py  tasks.py  viewer_panel.py
app/imaging/: image_io.py  processing.py  tonemapper.py
app/imaging/loaders/: __init__.py  base_loader.py  directxtex_loader.py  oiio_loader.py  pillow_loader.py
app/infrastructure/: cache.py  configuration.py  container.py  database.py  db_service.py  filesystem.py  settings.py  task_manager.py
app/loaders/: directxtex_loader.py  oiio_loader.py  pillow_loader.py
app/services/: config_builder.py  settings_manager.py
app/shared/: constants.py  diagnostics.py  events.py  logger.py  signal_bus.py  utils.py
app/ui/: background_tasks.py  controllers.py  delegates.py  dialogs.py  main_window.py  options.py  qt_models.py  results.py  status.py  viewer.py  widgets.py
app/ui/panels/: __init__.py  general.py  performance.py  qc.py  scan.py
app/ui/styles/Dark/: Dark.qss
app/workflow/: auxiliary.py  core.py  pipeline.py  qc_rules.py  scanner.py  stages.py  strategies.py
src/: App.jsx  app.rs  app_bindings.rs  cli.rs  database.rs  dds_loader.rs  downloader.rs  index.html  inference.rs  main.js  main.rs  perceptual.rs  qc.rs  styles.css  tonemapper.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  dds_loader.rs  downloader.rs  inference.rs  main.rs  perceptual.rs  qc.rs  tonemapper.rs
src/ai/: database.rs  downloader.rs  inference.rs  mod.rs  scanner.rs
src/components/: ResultsPanel.jsx  Sidebar.jsx  ThumbImage.jsx  ViewerPanel.jsx
src/core/: database.rs  downloader.rs  inference.rs  mod.rs  perceptual.rs  qc.rs  tonemapper.rs  visuals.rs
src/exact/: mod.rs  scanner.rs
src/format_loaders/: astc.rs  atc.rs  crn.rs  dds.rs  dds_loader.rs  exr.rs  heic.rs  jxl.rs  ktx2.rs  mod.rs  psd.rs  pvr.rs  qoi.rs  raw.rs  standard.rs  svg.rs
src/handlers/: actions.rs  controller.rs  files.rs  mod.rs  scan.rs  ui_state.rs  viewer.rs
src/perceptual/: hashing.rs  mod.rs  scanner.rs
src/qc/: mod.rs  rules.rs  scanner.rs
src/reporting/: contact_sheets.rs  html_report.rs  mod.rs
src/scanners/: ai.rs  exact.rs  mod.rs  perceptual.rs  qc.rs
src/state/: mod.rs  models.rs  store.rs
src/utils/: cache.rs  clustering.rs  export.rs  fs.rs  helpers.rs  image_processing.rs  mod.rs  notification.rs  settings.rs  slint_conversions.rs  ui.rs  viewport.rs
src/viewer/: mod.rs  tonemapping.rs  viewport.rs
src_directxtex_decoder/: .clang-format  CMakeLists.txt  pyproject.toml  setup.py
src_directxtex_decoder/directxtex_decoder/: decoder.cpp
src_directxtex_decoder/src/: decoder.cpp
temp/: hf_downloader.py  test_complex_model.py  test_image_libs.py  test_provider.py  tex_channel_splitter.py
tests/: export_highres.py  renormalize_tool.py  test_benchmark_providers.py  test_dynamo_export.py
ui/: app.slint  store.slint  structs.slint
ui/components/: buttons.slint  common.slint  compare_viewport.slint  context_menu.slint  file_formats_popup.slint  find_sidebar.slint  grid_card.slint  list_row.slint  skipped_popup.slint  table_header.slint  thumbnail.slint
ui/tabs/: compare_tab.slint  find_tab.slint  log_tab.slint
zzzzzzzzzzz/src/: app.rs  cli.rs
zzzzzzzzzzz/src/core/: downloader.rs  inference.rs  mod.rs  visuals.rs
zzzzzzzzzzz/src/format_loaders/: dds_loader.rs  mod.rs
zzzzzzzzzzz/src/scanners/: exact.rs  mod.rs  perceptual.rs
zzzzzzzzzzz/src/state/: mod.rs  models.rs
zzzzzzzzzzz/src/utils/: fs.rs  helpers.rs  settings.rs
zzzzzzzzzzz/ui/: app.slint
