[package]
name = "PixelHand"
version = "1.0.0"
edition = "2024"
description = "An AI-powered duplicate image finder, technical QC tool, and visual comparative viewer"

[dependencies]
# Slint UI Runtime with unstable-winit-030 feature enabled for native Drag and Drop
slint = { version = "1.17.0", features = ["image-default-formats", "unstable-winit-030"] }

# Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Concurrency & System
walkdir = "2.5.0"
rayon = "1.12.0"
memmap2 = "0.9.11"

# Image Processing
image = { version = "0.25.10", features = ["png", "jpeg", "tga", "bmp", "tiff", "webp"] }
exr = "1.74.0"
ddsfile = "0.6.0"
image_dds = { version = "0.7.2", features = ["image"] }
imagesize = "0.14.0"

# Hashing & Similarity
xxhash-rust = { version = "0.8.16", features = ["xxh64"] }
image_hasher = "3.1.1"

# AI & Machine Learning
ort = { version = "2.0.0-rc.12", features = ["ndarray", "directml", "cuda", "tensorrt", "coreml"] }
ndarray = "0.17.2"
tokenizers = "0.23.1"

# Database & Data Formats
lancedb = "0.31.0"
arrow = "59.0.0"
arrow-array = "59.0.0"
arrow-schema = "59.0.0"

# Async & Utilities
futures = "0.3.32"
futures-util = "0.3.32"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["v4"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream"] }
trash = "5.2.6"
rfd = "0.17.2"
base64 = "0.22.1"
reflink-copy = "0.1.30"

# Errors
anyhow = "1.0.103"
thiserror = "2.0.18"

open = "5.3.6"

rusttype = "0.9.3"
imageproc = "0.27.0"

ab_glyph = "0.2.32"

[patch.crates-io]
esaxx-rs = { git = "https://github.com/Roboticist01/esaxx-rs.git", branch = "main" }

[build-dependencies]
slint-build = "1.17.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
