[package]
name = "PixelHand"
version = "1.0.0"
edition = "2024"
description = "An AI-powered duplicate image finder, technical QC tool, and visual comparative viewer"

[dependencies]
# UI Framework (Slint with unstable-winit-030 for native OS Drag and Drop integrations)
slint = { version = "1.17.1", features = ["image-default-formats", "unstable-winit-030", "serde"] }

# Logging and Diagnostics
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

# Serialization and Formats
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"

# Parallelism and System IO
walkdir = "2.5.0"
rayon = "1.12.0"
memmap2 = "0.9.11"

# Image Processing and Specialized Loaders
image = { version = "0.25.10", features = ["png", "jpeg", "tga", "bmp", "tiff", "webp", "avif"] }
exr = "1.74.2"
ddsfile = "0.6.0"
image_dds = { version = "0.7.2", features = ["image"] }
imagesize = "0.14.0"
psd = "0.3.5"
jxl-oxide = { version = "0.12.6", features = ["image"] }
imageproc = "0.27.0"
ab_glyph = "0.2.32"
heic = "0.1.6"

# Image Hashes and Similarity Metrics
xxhash-rust = { version = "0.8.17", features = ["xxh64"] }
image_hasher = "3.1.1"
fast_image_resize = "6.0.0"

# Machine Learning and ONNX Runtime
ort = { version = "2.0.0-rc.12", features = ["ndarray", "directml", "cuda", "tensorrt", "coreml"] }
ndarray = "0.17.2"
tokenizers = "0.23.1"

# Embedded Database and Arrow Format Structures
lancedb = "0.31.0"
arrow = "59.1.0"
arrow-array = "59.1.0"
arrow-schema = "59.1.0"

# Async and General Utilities
futures = "0.3.33"
futures-util = "0.3.33"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1.24.0", features = ["v4"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream"] }
trash = "5.2.6"
rfd = "0.17.2"
base64 = "0.22.1"
reflink-copy = "0.1.30"
open = "5.4.0"

# Error Diagnostics
anyhow = "1.0.104"
thiserror = "2.0.19"

moka = { version = "0.12.15", features = ["sync"] }
ustr = "1.1.0"
parking_lot = "0.12.5"

[patch.crates-io]
# Override for suffix automaton crate compatibility
esaxx-rs = { git = "https://github.com/Roboticist01/esaxx-rs.git", branch = "main" }

[build-dependencies]
embed-resource = "3.0.11"
slint-build = "1.17.1"

[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
