[package]
name = "PixelHand"
version = "1.0.0"
edition = "2024"
description = "An AI-powered duplicate image finder, technical QC tool, and visual comparative viewer"

[dependencies]
# UI & Graphical Framework
slint = { version = "1.17.1", features = ["image-default-formats", "unstable-winit-030", "serde"] }

# AI Engine & Machine Learning Core
ort = { version = "2.0.0-rc.12", features = ["ndarray", "directml", "cuda", "tensorrt", "coreml"] }
tokenizers = "0.23.1"
ndarray = "0.17.2"

# Vector Database & Similarity Indexing
lancedb = "0.31.0"

# Image Processing & Graphics Format Loaders
image = { version = "0.25.10", features = ["png", "jpeg", "tga", "bmp", "tiff", "webp", "avif", "ico", "gif"] }
image_dds = { version = "0.7.2", features = ["image"] }
exr = "1.74.2"
resvg = "0.47.0"
jxl-oxide = { version = "0.12.6", features = ["image"] }
heic = "0.1.6"
psd = "0.3.5"
imagesize = "0.14.0"
imageproc = "0.27.0"
ab_glyph = "0.2.32"
texture2ddecoder = "0.1.2"
ktx2 = "0.5.0"

# Image Hashes & Visual Similarity Metrics
xxhash-rust = { version = "0.8.18", features = ["xxh64"] }
fast_image_resize = "6.1.0"

# Async Runtime & Network
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3.33"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream"] }

# Parallelism, Concurrency & Fast I/O
rayon = "1.12.0"
parking_lot = "0.12.5"
walkdir = "2.5.0"

# OS Integration & File Operations
trash = "5.2.6"
rfd = "0.17.2"
reflink-copy = "0.1.30"
open = "5.4.0"

# In-Memory Caching & Fast Data Structures
moka = { version = "0.12.15", features = ["sync"] }
ustr = "1.1.0"

# Data Serialization
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"

# Diagnostics, Logging & Error Handling
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
anyhow = "1.0.104"
thiserror = "2.0.19"

[patch.crates-io]
# Override for suffix automaton crate compatibility
esaxx-rs = { git = "https://github.com/Roboticist01/esaxx-rs.git", branch = "main" }

[build-dependencies]
slint-build = "1.17.1"
embed-resource = "3.0.11"

[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
